Fix for button shift

--- a/src/styles/betterButton.module.css
+++ b/src/styles/betterButton.module.css
@@ -17,7 +17,6 @@
     position: relative;
     margin: 0px borderSize 0px borderSize;
     font-family: 'Rubik';
-    display: inline-block;
     text-decoration: none;
 }
 
